--- a/Accessory_figs.rmd
+++ b/Accessory_figs.rmd
@@ -2,7 +2,7 @@
 library(remake)
 create_bindings()
 
-source("scripts/summary_dataframes.R")
+
 source("scripts/functions.R")
 ```
 #Summary  
@@ -29,21 +29,21 @@ is idiosyncratic across species
 options(scipen=10)
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
 mod <- lm (log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
-plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp(species), pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
-plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit investment (mg)",xlim=c(100,2000000),xlab="")
+plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp(species), pch=16, ylab="Fruit investment (mg)",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(propagule_inv), data=subset(SummaryInd,propagule_inv>0))
-plot(propagule_inv~total_weight,data=subset(SummaryInd,propagule_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(propagule_inv~total_weight,data=subset(SummaryInd,propagule_inv>0), log="xy",col=col.spp(species), pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(prepollen_all_inv), data=subset(SummaryInd,prepollen_all_inv>0))
-plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Prepollen investment (mg)", xlim=c(100,2000000))
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp(species), pch=16, xlab="", ylab="Prepollen investment (mg)", xlim=c(100,2000000))
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mtext("Total plant size (mg)",1, outer=TRUE,cex=1.2)
@@ -54,7 +54,7 @@ mtext("Total plant size (mg)",1, outer=TRUE,cex=1.2)
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7.5}
 par(mfrow=c(1,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
-plot(accessory_inv~repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)],
+plot(accessory_inv~repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp(species),
      xlim=c(1,700000),ylim=c(1,700000),xlab="Total reproductive investment (mg)",ylab="Investment in accessory tissues (mg)")
 abline(0,1)
 abline(-0.30103,1)
@@ -63,7 +63,7 @@ text(120,350,"all RE to accessory tissues",srt=45)
 text(12000,720,"10% RE to accessory tissues",srt=45)
 text(5,1.5,"50%",srt=45)
 
-plot(prepollen_all_inv~accessory_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)],
+plot(prepollen_all_inv~accessory_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp(species),
      xlim=c(1,700000),ylim=c(1,700000),ylab="Investment in pre-pollination tissues (mg)",xlab="Investment in all accessory tissues (mg)")
 abline(0,1)
 abline(-0.30103,1)
@@ -71,7 +71,7 @@ abline(-1,1)
 text(120,250,"all acc costs pre-pollination",srt=45)
 text(3000,180,"10% acc costs pre-pollination",srt=45)
 text(10,3,"50%",srt=45)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 ```
 
 ##3. What do accessory costs correlate with?
@@ -92,49 +92,49 @@ Interpretation:
 par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(.7,1,0.3,0.3))
 
 mod <- lm(log(seed_size)~(accessory_per_seed_mean),SummarySpp)
-plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="accessory costs per successful seed",xlab="",cex=.9)
-points((accessory_per_seed_mean)~seed_size,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=.9)
+points((accessory_per_seed_mean)~seed_size,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(seed_size)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=.9)
+plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=.9)
 words.bottom.right.logx(mod)
-points(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+points(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 mtext("seed size (mg)",1, outer=TRUE,cex=1.2)
 
 mod <- lm(log(total_weight_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="accessory costs per successful seed",xlab="",cex=.9)
-points((accessory_per_seed_mean)~total_weight_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=.9)
+points((accessory_per_seed_mean)~total_weight_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(total_weight_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=0.9)
-points(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
+points(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logx(mod)
 mtext("total plant weight (mg)",1, outer=TRUE,cex=1.2)
 
 mod <- lm(log(seedset_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="accessory costs per successful seed",xlab="",cex=0.9)
-points((accessory_per_seed_mean)~seedset_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=0.9)
+points((accessory_per_seed_mean)~seedset_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logxy(mod)
 
 mod <- lm(log(seedset_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=0.9)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-points(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
+legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+points(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logx(mod)
 mtext("seedset",1, outer=TRUE,cex=1.2)
 
 par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(1.1,1,0.3,0.3))
 mod <- lm(log(prepollen_all_per_seed_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp[as.factor(species)],ylab="accessory costs per successful seed",cex=0.9)
-points((accessory_per_seed_mean)~prepollen_all_per_seed_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp(species),ylab="accessory costs per successful seed",cex=0.9)
+points((accessory_per_seed_mean)~prepollen_all_per_seed_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
 mod <- lm(asin(sqrt(prop_prepollen_all_mean))~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",cex=0.9)
-points(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
+plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp(species),ylab="proportional accessory costs",cex=0.9)
+points(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right(mod)
 ```
 
@@ -156,16 +156,16 @@ words.bottom.right(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 
 mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp(species))
 words.bottom.right.logx(mod)
 ```
 
@@ -178,16 +178,16 @@ words.bottom.right.logx(mod)
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
 mod <- lm(asin(sqrt(seedset))~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+plot((repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
 
 mod <- lm(asin(sqrt(prop_propagule))~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
-plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(propagule_per_seed)~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
+plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
 words.bottom.right.logxy(mod)
 ```
 
@@ -203,20 +203,20 @@ words.bottom.right.logxy(mod)
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
 mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(seedset))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(seedset))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 
 mod <- lm(log(height)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(seedset))~(height),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="x")
+plot(asin(sqrt(seedset))~(height),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="x")
 words.bottom.right.logx(mod)
 
 mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(prop_propagule))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm((prop_maxH)~log(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((propagule_per_seed)~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp[as.factor(species)])
+plot((propagule_per_seed)~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp(species))
 words.bottom.right.logy(mod)
 ```
 
@@ -227,45 +227,45 @@ words.bottom.right.logy(mod)
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
 mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
-plot(propagule_inv~RA,data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
+plot(propagule_inv~RA,data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to propagules (mg)")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(RA)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~RA,data=subset(SummaryInd,RA>0&prop_propagule>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
+plot(asin(sqrt(prop_propagule))~RA,data=subset(SummaryInd,RA>0&prop_propagule>0), log="x", pch=16,col=col.spp(species),ylab="propagules (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
 
 mod <- lm(log(RA)~log((prepollen_aborted_inv)),data=subset(SummaryInd,RA>0&prepollen_aborted_inv>0))
-plot(prepollen_aborted_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination aborted tissues (mg)")
+plot(prepollen_aborted_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="xy",ylab="pre-pollination aborted tissues (mg)")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(RA)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0))
-plot(asin(sqrt(prop_prepollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
+plot(asin(sqrt(prop_prepollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0), pch=16,col=col.spp(species), log="x",ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
 words.bottom.right.logx(mod)
 
 mod <- lm(log(RA)~log((prepollen_success_inv)),data=subset(SummaryInd,RA>0&prepollen_success_inv>0))
-plot(prepollen_success_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination successful tissues (mg)")
+plot(prepollen_success_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="xy",ylab="pre-pollination successful tissues (mg)")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(RA)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,RA>0&prop_prepollen_success>0))
-plot(asin(sqrt(prop_prepollen_success))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_success>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
+plot(asin(sqrt(prop_prepollen_success))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_success>0), pch=16,col=col.spp(species), log="x",ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
 words.bottom.right.logx(mod)
 
 mod <- lm(log(RA)~log((packaging_dispersal_inv)),data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0))
-plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to packaging and dispersal (mg)")
+plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to packaging and dispersal (mg)")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(RA)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0))
-plot(asin(sqrt(prop_packaging_dispersal))~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="packaging and dispersal (as proportion repro inv)")
+plot(asin(sqrt(prop_packaging_dispersal))~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp(species),ylab="packaging and dispersal (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
 mod <- lm(log(RA)~log((postpollen_aborted_inv)),data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0))
-plot(postpollen_aborted_inv~RA,data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to tissues aborted postpollination (mg)")
+plot(postpollen_aborted_inv~RA,data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to tissues aborted postpollination (mg)")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(RA)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0))
-plot(asin(sqrt(prop_postpollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="tissues aborted postpollination (as proportion repro inv)")
+plot(asin(sqrt(prop_postpollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0), log="x", pch=16,col=col.spp(species),ylab="tissues aborted postpollination (as proportion repro inv)")
 words.bottom.left.logx(mod)
 ```
 
