--- a/Growth_figs.rmd
+++ b/Growth_figs.rmd
@@ -2,7 +2,7 @@
 library(remake)
 create_bindings()
 
-source("scripts/summary_dataframes.R")
+
 source("scripts/functions.R")
 ```
 
@@ -39,12 +39,12 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
+                    main=spp,col=col.mature(data[[spp]]$mature)
 }
 
 mtext("Vegetative investment", 2, outer=TRUE,cex=1.2)
 mtext("proportion maximum H", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 
@@ -58,12 +58,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Investment in leaves (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
@@ -76,12 +76,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Investment in stems (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ####Growth along shoot vs. stem  
@@ -98,13 +98,13 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
   abline(0,1)
 }
 
 mtext("increase in stem diameter (mm)", 2, outer=TRUE,cex=1.2)
 mtext("increase in shoot diameter (mm)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=0.9,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=0.9,bty="n")
 ```
 
 ####Plots of increase in whole plant versus shoot leaf area  
@@ -120,7 +120,7 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
   abline(0,1)
 }
 
@@ -137,11 +137,11 @@ mtext("increase in shoot leaf area", 1, outer=TRUE,cex=1.2)
     
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
-plot(LL_death~shoot_leaf_area,data=subset(SummaryInd,LL_death<6),log="x",pch=16,col=col.spp[as.factor(species)])
+plot(LL_death~shoot_leaf_area,data=subset(SummaryInd,LL_death<6),log="x",pch=16,col=col.spp(species))
 mod <- lm(log(shoot_leaf_area)~LL_death,data=subset(SummaryInd,LL_death<6))
 words.top.right.logx(mod)
 
-plot(LL_death~leaf_area,data=subset(SummaryInd,LL_death<6),log="x",pch=16,col=col.spp[as.factor(species)])
+plot(LL_death~leaf_area,data=subset(SummaryInd,LL_death<6),log="x",pch=16,col=col.spp(species))
 mod <- lm(log(leaf_area)~LL_death,data=subset(SummaryInd,LL_death<6))
 words.top.right.logx(mod)
 ```
@@ -167,12 +167,12 @@ results
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("ll death", 2, outer=TRUE,cex=1.2)
 mtext("shoot leaf area", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ***leaf lifespan vs. whole plant leaf area***  
@@ -187,12 +187,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("ll death", 2, outer=TRUE,cex=1.2)
 mtext("leaf area", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 
 yvar <- "LL_death"
 xvar <- "leaf_area"
@@ -214,7 +214,7 @@ results
 ***growth stem diam vs. prop maxH***
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
-plot(growth_stem_diameter~prop_maxH,SummaryInd,log="y",pch=16,col=col.spp[as.factor(species)])
+plot(growth_stem_diameter~prop_maxH,SummaryInd,log="y",pch=16,col=col.spp(species))
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
@@ -227,18 +227,18 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("growth_stem_diameter", 2, outer=TRUE,cex=1.2)
 mtext("prop_maxH", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ***growth leaf area vs. prop maxH***
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
-plot(growth_leaf_area~prop_maxH,SummaryInd,log="y",pch=16,col=col.spp[as.factor(species)])
+plot(growth_leaf_area~prop_maxH,SummaryInd,log="y",pch=16,col=col.spp(species))
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
@@ -251,12 +251,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("increase in leaf area", 2, outer=TRUE,cex=1.2)
 mtext("prop_maxH", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 
@@ -270,12 +270,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("total size", 2, outer=TRUE,cex=1.2)
 mtext("prop_maxH", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
@@ -288,18 +288,18 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
+                    main=spp,col=col.mature(data[[spp]]$mature)
 }
 
 mtext("total size", 2, outer=TRUE,cex=1.2)
 mtext("prop_maxH", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 
-plot(wood_density~growth_leaf_area,SummaryInd,log="y",pch=16,col=col.age[as.factor(age)])
+plot(wood_density~growth_leaf_area,SummaryInd,log="y",pch=16,col=col.age(age)
 mod <- lm(log(growth_leaf_area)~age*wood_density,SummaryInd)
 summary(mod)
 ```
