--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -26,9 +26,9 @@ source("scripts/functions.R")
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7.5}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
 mod <- lm(log(growth_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
-plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp[as.factor(species)],pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 words.top.left.logxy(mod)
-legend("bottomright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("bottomright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 abline(0,1)
 text(2.1,3,srt=45,"RA = 0.5")
 abline(log10(3),1)
@@ -42,8 +42,8 @@ text(19,3,srt=45,"RA = 0.1")
 abline(log10(.010101),1)
 text(170,2.4,srt=45,"RA = 0.01")
 
-plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.age[as.factor(age)],pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
 abline(0,1)
 text(2.1,3,srt=45,"RA = 0.5")
 abline(log10(3),1)
@@ -88,12 +88,12 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("RA", 2, outer=TRUE,cex=1.2)
 mtext("proportion maximum H", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ###RV curves by species
@@ -114,12 +114,12 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ###Vegetative invesment by size curves by species, only including reproducing individuals  
@@ -142,12 +142,12 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ###Vegetative invesment by size curves by species, including all individuls  
@@ -173,12 +173,12 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
+                    main=spp,col=col.mature(data[[spp]]$mature)
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 ###Including all investment vs. growth  
@@ -205,12 +205,12 @@ results
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
+                    main=spp,col=col.mature(data[[spp]]$mature)
 }
 
 mtext("Vegetative + reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
@@ -231,7 +231,7 @@ results
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
+                    main=spp,col=col.mature(data[[spp]]$mature)
 }
 
 ###calc_veg <- merge(SummaryInd, select(results, -species), by="species",all.x=TRUE)
@@ -239,7 +239,7 @@ for(spp in names(data)) {
 
 mtext("Increase in plant height (mm)", 2, outer=TRUE,cex=1.2)
 mtext("Plant height (mm)", 1, outer=TRUE,cex=1.2)
-legend("topleft",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
+legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
 
 ####RA is a population level parameter, so noise expected across individuals
@@ -271,12 +271,12 @@ mtext("age", 2, outer=TRUE,cex=1.2)
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,1.1,.4,0.2)) 
-plot(asin(sqrt(RA))~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp[as.factor(species)], pch=16)
+plot(asin(sqrt(RA))~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
 mod <- lm(log(growth_stem_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=0.8,bty="n")
+legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=0.8,bty="n")
 
-plot(asin(sqrt(RA))~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp[as.factor(species)], pch=16)
+plot(asin(sqrt(RA))~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
 mod <- lm(log(growth_shoot_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
 ```
@@ -291,12 +291,12 @@ data <- split(data, data$species)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                    main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Stem diameter growth", 1, outer=TRUE,cex=1.2)
 mtext("RA", 2, outer=TRUE,cex=1.2)  
-legend("bottomleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
     
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
@@ -309,12 +309,12 @@ data <- split(data, data$species)
     
 for(spp in names(data)) {
 plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
-                        main=spp,col=col.age[as.factor(data[[spp]]$age)])
+                        main=spp,col=col.age(data[[spp]]$age)
 }
 
 mtext("Shoot diameter growth", 1, outer=TRUE,cex=1.2)
 mtext("RA", 2, outer=TRUE,cex=1.2)  
-legend("bottomleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
    
@@ -420,10 +420,10 @@ summarise_each(funs(mean, se), PC1_scale, PC2_scale, PC3_scale, PC4_scale)
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
 par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],xlim=c(-.1,.1))
+plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species),xlim=c(-.1,.1))
 arrows(0, 0, (.8*PCA_loadings$PC2_scale), (.8*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mean1 <- PCA_by_species$PC1_scale_mean
 se1 <- PCA_by_species$PC1_scale_se
@@ -433,10 +433,10 @@ se_function(mean1,se1)
 PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC1_scale))
 plot(PC1_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
 
-plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
 
 mean1 <- PCA_by_age$PC1_scale_mean
 se1 <- PCA_by_age$PC1_scale_se
@@ -451,7 +451,7 @@ se_function(mean1,se1)
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
 par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
@@ -463,7 +463,7 @@ se_function(mean1,se1)
 PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC2_scale))
 plot(PC2_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
 
-plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
@@ -482,7 +482,7 @@ se_function(mean1,se1)
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
 par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.15))
+plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.15))
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=.8,col="black")
 
@@ -494,7 +494,7 @@ se_function(mean1,se1)
 PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC3_scale))
 plot(PC3_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
 
-plot(PC3_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)],ylim=c(-.15,.15))
+plot(PC3_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age),ylim=c(-.15,.15))
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
@@ -513,10 +513,10 @@ se_function(mean1,se1)
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
 par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.15))
+plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.15))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mean1 <- PCA_by_species$PC4_scale_mean
 se1 <- PCA_by_species$PC4_scale_se
@@ -526,7 +526,7 @@ se_function(mean1,se1)
 PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC4_scale))
 plot(PC4_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
 
-plot(PC4_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)],ylim=c(-.15,.15))
+plot(PC4_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age),ylim=c(-.15,.15))
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
