--- a/results_accessory_shorter.Rmd
+++ b/results_accessory_shorter.Rmd
@@ -2,7 +2,7 @@
 library(remake)
 create_bindings()
 
-source("scripts/summary_dataframes.R")
+
 source("scripts/functions.R")
 ```
 
@@ -41,20 +41,20 @@ source("scripts/functions.R")
 ```{r, echo=FALSE,message=FALSE,,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
 mod <- lm (log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
-plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp(species), pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
-plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit weight (mg)",xlim=c(100,2000000),xlab="")
+plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp(species), pch=16, ylab="Fruit weight (mg)",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(propagule_inv), data=subset(SummaryInd,propagule_inv>0))
-plot(propagule_inv~total_weight,data=subset(SummaryInd,propagule_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(propagule_inv~total_weight,data=subset(SummaryInd,propagule_inv>0), log="xy",col=col.spp(species), pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(seedset), data=subset(SummaryInd,seedset>0))
-plot(seedset~total_weight,data=subset(SummaryInd,prop_propagule>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="seedset",xlim=c(100,2000000),xlab="")
+plot(seedset~total_weight,data=subset(SummaryInd,prop_propagule>0), log="xy",col=col.spp(species), pch=16, ylab="seedset",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
 mtext("Total size (mg)", 1, outer=TRUE,cex=1.2)
 ```
@@ -70,20 +70,20 @@ mtext("Total size (mg)", 1, outer=TRUE,cex=1.2)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3))
 mod <- lm(log(seed_size)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, log="x", pch=16,col=col.spp(species),ylab="",xlab="seed size (mg)",cex=1.3)
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logx(mod)
 
 mod <- lm(log(total_weight_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
+plot(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, log="x", pch=16,col=col.spp(species),ylab="",xlab="Total weight (mg)",cex=1.3)
 words.bottom.right.logx(mod)
 
 mod <- lm(log(seedset_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",cex=1.3)
+plot(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, log="x", pch=16,col=col.spp(species),ylab="",cex=1.3)
 words.top.right.logx(mod)
 
 mod <- lm(asin(sqrt(prop_prepollen_all_mean))~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, log="", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
+plot(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, log="", pch=16,col=col.spp(species),ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.top.right(mod)
 mtext("Proportion reproductive investment to accessory tissues (asin transformed)",2, outer=TRUE,cex=1.2)
 ```
@@ -96,20 +96,20 @@ mtext("Proportion reproductive investment to accessory tissues (asin transformed
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3)) 
 mod <- lm(log(seed_size)~(accessory_per_seed_mean),SummarySpp)
-plot(accessory_per_seed_mean~seed_size,SummarySpp, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(accessory_per_seed_mean~seed_size,SummarySpp, log="xy", pch=16,col=col.spp(species),ylab="",xlab="seed size (mg)",cex=1.3)
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(total_weight_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot(accessory_per_seed_mean~total_weight_mean,SummarySpp, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
+plot(accessory_per_seed_mean~total_weight_mean,SummarySpp, log="xy", pch=16,col=col.spp(species),ylab="",xlab="Total weight (mg)",cex=1.3)
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(seedset_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot((accessory_per_seed_mean)~seedset_mean,SummarySpp, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",cex=1.3)
+plot((accessory_per_seed_mean)~seedset_mean,SummarySpp, log="xy", pch=16,col=col.spp(species),ylab="",cex=1.3)
 words.top.right.logxy(mod)
 
 mod <- lm(log(prepollen_all_per_seed_mean)~log(accessory_per_seed_mean),SummarySpp)
-plot(log(accessory_per_seed_mean)~log(prepollen_all_per_seed_mean),SummarySpp, log="", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
+plot(log(accessory_per_seed_mean)~log(prepollen_all_per_seed_mean),SummarySpp, log="", pch=16,col=col.spp(species),ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.top.right(mod)
 mtext("Accessory tissue investment per successful seed (mg)",2, outer=TRUE,cex=1.2)
 ```
@@ -117,20 +117,20 @@ mtext("Accessory tissue investment per successful seed (mg)",2, outer=TRUE,cex=1
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3)) 
 mod <- lm(log(seed_size)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="",xlab="seed size (mg)",cex=1.3)
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(total_weight)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
+plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="",xlab="Total weight (mg)",cex=1.3)
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",cex=1.3)
+plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="",cex=1.3)
 words.top.right.logxy(mod)
 
 mod <- lm(log(prepollen_all_per_seed)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0&prepollen_all_per_seed>0))
-plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
+plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp(species),ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.bottom.right.logxy(mod)
 mtext("Accessory tissue investment per successful seed (mg)",2, outer=TRUE,cex=1.2)
 ```
@@ -138,20 +138,20 @@ mtext("Accessory tissue investment per successful seed (mg)",2, outer=TRUE,cex=1
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3)) 
 mod <- lm(log(seed_size)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
+plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="",xlab="seed size (mg)",cex=1.3)
 words.bottom.right.logx(mod)
 
 mod <- lm(log(total_weight)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
+plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="",xlab="Total weight (mg)",cex=1.3)
 words.bottom.right.logx(mod)
 
 mod <- lm(log(seedset)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",cex=1.3)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="",cex=1.3)
+legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.top.right.logx(mod)
 
 mod <- lm(asin(sqrt(prop_prepollen_all))~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0&prepollen_all_per_seed>0))
-plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
+plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp(species),ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.bottom.right(mod)
 mtext("Proportion reproductive investment to accessory tissues (asin transformed)",2, outer=TRUE,cex=1.2)
 ```
@@ -162,12 +162,12 @@ mtext("Proportion reproductive investment to accessory tissues (asin transformed
 * In other words, patterns of accessory costs vs. seed size, plant size, etc come about due to the differential effect of bud, flower abortion across species  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
-plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)],xlab="costs to make 1 seed (mg)",cex=1.2)
+plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp(species),xlab="costs to make 1 seed (mg)",cex=1.2)
 mod <- lm(seedcosts~seed_size, SummarySpp)
 words.bottom.right.logxy(mod)
 text(seed_size~seedcosts,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
 
-plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
+plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp(species),ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
 text(seed_size~costs_per_seed,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
 mod <- lm(costs_per_seed~seed_size, SummarySpp)
 words.bottom.left.logy(mod)
@@ -180,14 +180,14 @@ words.bottom.left.logy(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.3,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="proportion reproduction to propagules (1-accessory)")
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp(species),xlab="",ylab="proportion reproduction to propagules (1-accessory)")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age[as.factor(age)],ylab="proportion reproduction to propagules (1-accessory)",xlab="")
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age(age),ylab="proportion reproduction to propagules (1-accessory)",xlab="")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
 mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```
 
@@ -195,12 +195,12 @@ mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.3,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="proportion reproduction to propagules (1-accessory)")
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp(species),xlab="",ylab="proportion reproduction to propagules (1-accessory)")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seedset>0&seedset<1&accessory_per_seed>0))
-plot(accessory_per_seed~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="accessory costs per seed produced (mg)")
+plot(accessory_per_seed~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp(species),xlab="",ylab="accessory costs per seed produced (mg)")
 words.bottom.left.logxy(mod)
 mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```
@@ -213,12 +213,12 @@ mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE,message=FALSE, ,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(repro_inv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
-plot((prop_prepollen_all)~repro_inv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
+plot((prop_prepollen_all)~repro_inv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp(species),xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
 words.top.right.logx(mod)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
  
 mod <- lm(log(repro_inv)~log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
-plot(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
+plot(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp(species),xlab="",ylab="Propagules (as proportion repro inv)")
 words.top.right.logxy(mod)
 mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
 ```
@@ -229,15 +229,15 @@ mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.3,0.3,0.1,0.3), mai=c(1.1,1,0.3,0.3)) 
 mod <- lm(log(RA)~log((repro_inv)),data=subset(SummaryInd,RA>0))
-plot(RA~(repro_inv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
+plot(RA~(repro_inv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp(species),log="xy")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mod <- lm(log(RA)~species*age*log((repro_inv)),data=subset(SummaryInd,RA>0))
 anova(mod)
 
 mod <- lm(log(RA)~log((age)),data=subset(SummaryInd,RA>0))
-plot(RA~(age),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="")
+plot(RA~(age),data=subset(SummaryInd,RA>0), pch=16,col=col.spp(species),log="xy",ylab="")
 words.bottom.right.logxy(mod)
 ```
 
@@ -247,12 +247,12 @@ words.bottom.right.logxy(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(RA)~log(repro_all_count),data=subset(SummaryInd,repro_all_count>0))
-plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of buds produced",xlab="")
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp(species),pch=16,log="xy",ylab="# of buds produced",xlab="")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm(log(RA)~log(seed_count+.1),data=subset(SummaryInd,repro_all_count>0))
-plot((.1+seed_count)~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of seeds produced",xlab="")
+plot((.1+seed_count)~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp(species),pch=16,log="xy",ylab="# of seeds produced",xlab="")
 words.bottom.right.logxy(mod)
 mtext("RA",1, outer=TRUE,cex=1.1)
 
@@ -281,20 +281,20 @@ results
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 mod <- lm(log(RA)~log((prepollen_all_inv)),data=subset(SummaryInd,RA>0&prepollen_all_inv>0))
-plot(prepollen_all_inv~(RA),data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination tissues (mg)")
+plot(prepollen_all_inv~(RA),data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="xy",ylab="pre-pollination tissues (mg)")
 words.bottom.right.logxy(mod)
 
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
-plot(propagule_inv~(RA),data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
+plot(propagule_inv~(RA),data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to propagules (mg)")
 words.bottom.right.logxy(mod)
 
 mod <- lm(asin(sqrt(RA))~asin(sqrt(prop_prepollen_all)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0))
-plot(asin(sqrt(prop_prepollen_all))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination tissues (as proportion repro inv) (asin)")
+plot(asin(sqrt(prop_prepollen_all))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0), pch=16,col=col.spp(species), ylab="pre-pollination tissues (as proportion repro inv) (asin)")
 words.top.right(mod)
 
 mod <- lm(log(RA)~log((prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
-plot((prop_propagule)~(RA),data=subset(SummaryInd,RA>0&prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
+plot((prop_propagule)~(RA),data=subset(SummaryInd,RA>0&prop_propagule>0), log="xy", pch=16,col=col.spp(species),ylab="propagules (as proportion repro inv)")
 words.bottom.left.logxy(mod)
 ```
 
@@ -307,9 +307,9 @@ words.bottom.left.logxy(mod)
 ```{r, echo=FALSE,message=FALSE}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset<1&seedset>0))
-plot(asin(sqrt(seedset))~prop_maxH,data=subset(SummaryInd,seedset<1&seedset>0), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(seedset))~prop_maxH,data=subset(SummaryInd,seedset<1&seedset>0), pch=16,col=col.spp(species))
 words.top.right(mod)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 yvar <- "seedset"
 xvar <- "prop_maxH"
