--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -2,7 +2,7 @@
 library(remake)
 create_bindings()
 
-source("scripts/summary_dataframes.R")
+
 source("scripts/functions.R")
 ```
 #Growth data, general patterns
@@ -29,8 +29,8 @@ source("scripts/functions.R")
 - NOTE: The variable "prop_maxH" is "current height/maximum species height (across all sites)", hence varying from 0-1. This lets data from all species to be plotted together  
 ```{r, echo=FALSE, message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.6,0.2))
-plot((total_weight~prop_maxH), SummaryInd, col=col.spp[as.factor(species)],pch=16,log="y")
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot((total_weight~prop_maxH), SummaryInd, col=col.spp(species),pch=16,log="y")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 ```
 
 ```{r, echo=FALSE, message=FALSE, fig.width=21, fig.height=28}
@@ -94,11 +94,11 @@ for(spp in names(data)) {
  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.8,0.3,.5,0.2), mai=c(.7,1,.1,0.2))
-plot((growth_inv~prop_maxH), SummaryInd, log="y", col=col.spp[as.factor(species)],pch=16,xlab="")
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot((growth_inv~prop_maxH), SummaryInd, log="y", col=col.spp(species),pch=16,xlab="")
+legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
-plot(growth_inv~prop_maxH, SummaryInd, log="y", col=col.age[as.factor(age)],pch=16,ylab="",xlab="")
-legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+plot(growth_inv~prop_maxH, SummaryInd, log="y", col=col.age(age),pch=16,ylab="",xlab="")
+legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
 mtext("proportion Hmax", 1, outer=TRUE,cex=1.2)
 ```
 
@@ -139,8 +139,8 @@ results
 
 ```{r, echo=FALSE, message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(RGR~prop_maxH,SummaryInd,col=col.spp[as.factor(species)],pch=16)
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(RGR~prop_maxH,SummaryInd,col=col.spp(species),pch=16)
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 ```
 
 ```{r, echo=FALSE, message=FALSE, fig.width=21, fig.height=35}
@@ -181,8 +181,8 @@ TO DO: species should be a random effect for these stats- I want to know the eff
 
 ```{r, echo=FALSE,message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(growth_shoot_area~growth_stem_area,data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
-legend("bottomright",col=col.spp, legend=names(labels.spp), pch=16, cex=1,bty="n")
+plot(growth_shoot_area~growth_stem_area,data=subset(SummaryInd), log="xy",col=col.spp(species), pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
+legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=1,bty="n")
 
 mod <- lm(growth_shoot_area~species*age*growth_stem_area,SummaryInd)
 anova(mod)
@@ -197,8 +197,8 @@ anova(mod)
 
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(shoot_leaf_count~age,data=subset(SummaryInd,age>2),log="xy", xlab="age",ylab="final leaf count along shoot",col=col.spp[as.factor(species)])
-legend("bottomright",col=col.spp, legend=names(labels.spp), pch=16, cex=1,bty="n")
+plot(shoot_leaf_count~age,data=subset(SummaryInd,age>2),log="xy", xlab="age",ylab="final leaf count along shoot",col=col.spp(species))
+legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=1,bty="n")
 
 yvar <- "shoot_leaf_count"
 xvar <- "age"
@@ -221,8 +221,8 @@ results
 
 ```{r, echo=FALSE,message=FALSE,, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(leaf_weight~total_weight,SummaryInd, log="xy",col=col.spp[as.factor(species)], pch=16, cex=0.8)
-legend("bottomright",col=col.spp, legend=names(labels.spp), pch=16, cex=.8, bty="n")
+plot(leaf_weight~total_weight,SummaryInd, log="xy",col=col.spp(species), pch=16, cex=0.8)
+legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=.8, bty="n")
 ```
 
 ###Shifts in shoot extension with age
@@ -236,12 +236,12 @@ legend("bottomright",col=col.spp, legend=names(labels.spp), pch=16, cex=.8, bty=
 ```{r, echo=FALSE,message=FALSE,, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 mod <- lm(prop_maxH~growth_shoot_length,data=subset(SummaryInd,age>2))
-plot(growth_shoot_length~prop_maxH,data=subset(SummaryInd,age>2),log="y", ylab="shoot extension (mm)",col=col.spp[as.factor(species)],pch=16)
-legend(12,200,col=col.spp, legend=names(labels.spp), pch=16, cex=.8,bty="n")
+plot(growth_shoot_length~prop_maxH,data=subset(SummaryInd,age>2),log="y", ylab="shoot extension (mm)",col=col.spp(species),pch=16)
+legend(12,200,col=col.spp, legend=labels.spp(), pch=16, cex=.8,bty="n")
 words.bottom.right.logy(mod)
 
 mod <- lm(age~species*growth_shoot_length,data=subset(SummaryInd,age>2))
-plot(growth_shoot_length~age,data=subset(SummaryInd,age>2),log="xy", ylab="shoot extension (mm)",col=col.spp[as.factor(species)],pch=16)
+plot(growth_shoot_length~age,data=subset(SummaryInd,age>2),log="xy", ylab="shoot extension (mm)",col=col.spp(species),pch=16)
 words.bottom.right.logxy(mod)
 anova(mod)
 
@@ -286,10 +286,10 @@ mtext("shoot extension (mm)", 2, outer=TRUE,cex=1.2)
 ```{r, echo=FALSE,message=FALSE}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 mod <- lm (growth_shoot_area ~ growth_stem_area*species*age,data=subset(SummaryInd, age>1.4))
-plot((growth_shoot_area/10000) ~ growth_stem_area,data=subset(SummaryInd, age>1.4), log="xy",col=col.age2[as.factor(age)], pch=16)
+plot((growth_shoot_area/10000) ~ growth_stem_area,data=subset(SummaryInd, age>1.4), log="xy",col=col.age(age), pch=16)
 abline(0,1)
 words.bottom.right.logxy(mod)
-legend("topleft",col=col.age, labels.age, pch=16, cex=1, bty="n")
+legend("topleft",col=col.age, labels.age(), pch=16, cex=1, bty="n")
 anova(mod)
 ```
 
@@ -327,7 +327,7 @@ for(spp in names(data)) {
                     main=spp, xlab="", ylab="")
   }
 
-legend("topleft",col=col.age2, labels.age2, pch=16, cex=1, bty="n")
+legend("topleft",col=col.age, labels.age(), pch=16, cex=1, bty="n")
 mtext("growth in basal stem area", 1, outer=TRUE,cex=1.2)
 mtext("growth in leader stem area", 2, outer=TRUE,cex=1.2)
 ```
@@ -335,16 +335,16 @@ mtext("growth in leader stem area", 2, outer=TRUE,cex=1.2)
 ### Leaf area versus plant size and height
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.1,.2,.1,.1), mai=c(1,1,.5,0.2)) 
-plot(leaf_area~total_weight, SummaryInd,log="xy",col=col.age[as.factor(age)], pch=16)
+plot(leaf_area~total_weight, SummaryInd,log="xy",col=col.age(age), pch=16)
 mod <- lm(log(total_weight)~log(leaf_area), SummaryInd)
 words.bottom.right.logxy(mod)
 
-plot(leaf_area~prop_maxH, SummaryInd,log="y",col=col.age[as.factor(age)], pch=16)
+plot(leaf_area~prop_maxH, SummaryInd,log="y",col=col.age(age), pch=16)
 
-plot(leaf_area~total_weight, SummaryInd,log="xy",col=col.spp[as.factor(species)], pch=16)
+plot(leaf_area~total_weight, SummaryInd,log="xy",col=col.spp(species), pch=16)
 words.bottom.right.logxy(mod)
 
-plot(leaf_area~prop_maxH, SummaryInd,log="y",col=col.spp[as.factor(species)], pch=16)
+plot(leaf_area~prop_maxH, SummaryInd,log="y",col=col.spp(species), pch=16)
 ```
 
 ### Leaf weight versus plant size and height
@@ -353,16 +353,16 @@ plot(leaf_area~prop_maxH, SummaryInd,log="y",col=col.spp[as.factor(species)], pc
 * oldest plants (&PILI) fall below the main line of points  
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.1,.2,.1,.1), mai=c(1,1,.5,0.2)) 
-plot(leaf_weight~total_weight, SummaryInd,log="xy",col=col.age[as.factor(age)], pch=16)
+plot(leaf_weight~total_weight, SummaryInd,log="xy",col=col.age(age), pch=16)
 mod <- lm(log(total_weight)~log(leaf_weight), SummaryInd)
 words.bottom.right.logxy(mod)
 
-plot(leaf_weight~prop_maxH, SummaryInd,log="y",col=col.age[as.factor(age)], pch=16)
+plot(leaf_weight~prop_maxH, SummaryInd,log="y",col=col.age(age), pch=16)
 
-plot(leaf_weight~total_weight, SummaryInd,log="xy",col=col.spp[as.factor(species)], pch=16)
+plot(leaf_weight~total_weight, SummaryInd,log="xy",col=col.spp(species), pch=16)
 words.bottom.right.logxy(mod)
 
-plot(leaf_weight~prop_maxH, SummaryInd,log="y",col=col.spp[as.factor(species)], pch=16)
+plot(leaf_weight~prop_maxH, SummaryInd,log="y",col=col.spp(species), pch=16)
 ```
 
 
@@ -374,21 +374,21 @@ mod <- lm(leaf_area ~stem_weight*species*age, SummaryInd)
 anova(mod)
 
 par(mfrow=c(2,2), cex=1, omi=c(.1,.2,.1,.1), mai=c(1,1,.5,0.2)) 
-plot((RGR_leaf)~(RGR_stem), SummaryInd,col=col.age[as.factor(age)], pch=16,ylim=c(-1,4))
+plot((RGR_leaf)~(RGR_stem), SummaryInd,col=col.age(age), pch=16,ylim=c(-1,4))
 abline(0,0)
 abline(0,1)
-legend("topleft",col=col.age, labels.age, pch=16, cex=1, bty="n")
+legend("topleft",col=col.age, labels.age(), pch=16, cex=1, bty="n")
 
-plot((leaf_area)~(stem_weight), SummaryInd,col=col.age[as.factor(age)], pch=16,log="xy")
+plot((leaf_area)~(stem_weight), SummaryInd,col=col.age(age), pch=16,log="xy")
 abline(0,1)
 text(1000,1800,srt=39,labels="1:1 line")
 
-plot((RGR_leaf)~(RGR_stem), SummaryInd,col=col.spp[as.factor(species)], pch=16,ylim=c(-1,4),xlab="")
+plot((RGR_leaf)~(RGR_stem), SummaryInd,col=col.spp(species), pch=16,ylim=c(-1,4),xlab="")
 abline(0,0)
 abline(0,1)
-legend("topleft",col=col.spp, legend=names(labels.spp), pch=16, cex=.9, bty="n")
+legend("topleft",col=col.spp, legend=labels.spp(), pch=16, cex=.9, bty="n")
 
-plot((leaf_area)~(stem_weight), SummaryInd,col=col.spp[as.factor(species)], pch=16,log="xy",xlab="")
+plot((leaf_area)~(stem_weight), SummaryInd,col=col.spp(species), pch=16,log="xy",xlab="")
 abline(0,1)
 text(1000,1800,srt=39,labels="1:1 line")
 words.bottom.right.logxy(mod)
@@ -404,8 +404,8 @@ words.bottom.right.logxy(mod)
 - The same basic relationship exists across all ages, so combined all data here  
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(growth_inv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
-legend("topleft",col=col.age, labels.age, pch=16, cex=1,bty="n")
+plot(growth_inv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age(age),pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
+legend("topleft",col=col.age, labels.age(), pch=16, cex=1,bty="n")
 text(growth_inv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
 ```
 
@@ -414,7 +414,7 @@ text(growth_inv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=spec
 - There is a positive correlation with the maximum height the species reaches at a given age -i.e. fast growing young plants are tall when young.  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
 text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
@@ -425,11 +425,11 @@ mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
 text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
-legend("topleft",col=col.age,labels.age,pch=16, bty="n")
+legend("topleft",col=col.age,labels.age(),pch=16, bty="n")
 
 mtext("maximum H",1,outer=TRUE)
 mtext("yearly growth (mg)",2,outer=TRUE)
@@ -440,7 +440,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - However there is no relationship in younger plants  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
 text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.left.logxy(mod)
@@ -449,9 +449,9 @@ plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col=
 text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.left.logxy(mod)
-legend("topright",col=col.age,labels.age,pch=16, bty="n")
+legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
-plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
 text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age>3))
 words.bottom.left.logxy(mod)
@@ -463,7 +463,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 * same wood density data plotted against RGR instead - also no pattern with young
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(RGR_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+plot(RGR_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
 text(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
@@ -472,7 +472,7 @@ plot(RGR_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1"
 text(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
-legend("topright",col=col.age,labels.age,pch=16, bty="n")
+legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
 mtext("wood density",1,outer=TRUE)
 mtext("RGR",2,outer=TRUE)
@@ -481,7 +481,7 @@ mtext("RGR",2,outer=TRUE)
 ### Leaf area vs growth investment
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
+plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
 text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
@@ -492,11 +492,11 @@ mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
+plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
 text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
-legend("topleft",col=col.age,labels.age,pch=16, bty="n")
+legend("topleft",col=col.age,labels.age(),pch=16, bty="n")
 
 mtext("leaf area",1,outer=TRUE)
 mtext("yearly growth (mg)",2,outer=TRUE)
@@ -509,7 +509,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - But relationship in adults disappears when HATE is removed...
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
 text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
@@ -518,14 +518,14 @@ plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col
 text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
-legend("topright",col=col.age,labels.age,pch=16, bty="n")
+legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
 text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
 text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"))
 words.bottom.right.logxy(mod)
@@ -539,7 +539,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - And just barely a significant relationship between RGR and leaflifespan for adult plants
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2))
-plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
 text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
 mod <- lm(log(LL_death_mean)~log(growth_inv_mean), data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
@@ -549,10 +549,10 @@ text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4), label
 mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
 text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3))
-legend("topright",col=col.age,labels.age,pch=16, bty="n")
+legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 words.bottom.right.logxy(mod)
 
 mtext("leaf lifespan",1,outer=TRUE)
@@ -656,17 +656,17 @@ PCA_by_species <- SummaryInd_PCA_results %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), PC1_scale, PC2_scale, PC3_scale, PC4_scale)
 
-plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],xlim=c(-.1,.1))
+plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species),xlim=c(-.1,.1))
 arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mean1 <- PCA_by_species$PC1_scale_mean
 se1 <- PCA_by_species$PC1_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 1")
 se_function(mean1,se1)
 
-plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
@@ -675,7 +675,7 @@ se1 <- PCA_by_species$PC2_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
 
-plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
@@ -684,10 +684,10 @@ se1 <- PCA_by_species$PC3_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 3")
 se_function(mean1,se1)
 
-plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.15))
+plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.15))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
 mean1 <- PCA_by_species$PC4_scale_mean
 se1 <- PCA_by_species$PC4_scale_se
@@ -703,20 +703,20 @@ se_function(mean1,se1)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
-plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)],ylim=c(-.15,.12))
+plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.age(age),ylim=c(-.15,.12))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-plot(PC3_scale~PC2_scale,SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+plot(PC3_scale~PC2_scale,SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 ```
@@ -790,20 +790,20 @@ PCA_loadings$PC4_scale <- PCA_loadings$PC4 / 4.5
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 
-plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
-plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.12))
+plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.12))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-plot(PC3_scale~PC2_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+plot(PC3_scale~PC2_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 ```
@@ -837,18 +837,18 @@ plot(mod)
 -
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
-plot(WD_mean~maxH,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
+plot(WD_mean~maxH,SummarySpp, log="x",col=col.spp(species),pch=16)
 mod <- lm(log(maxH)~WD_mean,SummaryInd)
 words.bottom.left.logx(mod)
 
-plot(WD_mean~maxH,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"), log="x",col=col.spp[as.factor(species)],pch=16)
+plot(WD_mean~maxH,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"), log="x",col=col.spp(species),pch=16)
 mod <- lm(log(maxH)~WD_mean,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"))
 words.bottom.left.logx(mod)
 
-plot(seedset_mean~total_weight_mean,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
+plot(seedset_mean~total_weight_mean,SummarySpp, log="x",col=col.spp(species),pch=16)
 mod <- lm(log(total_weight_mean) ~ (seedset_mean),SummarySpp)
 words.bottom.left.logx(mod)
 
-plot(seedset_mean~maxH,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
+plot(seedset_mean~maxH,SummarySpp, log="x",col=col.spp(species),pch=16)
 mod <- lm(log(maxH) ~ (seedset_mean),SummarySpp)
 words.bottom.left.logx(mod)
